<resources>
    <string name="app_name">RickAndMortyApp</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="todo">TODO</string>
    <string name="back">back</string>
    <string name="filter">filter</string>
    <string name="character_detail">Character detail</string>
    <string name="episode_details">Episode details</string>
    <string name="location_details">Location details</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="species">species</string>
    <string name="status">status</string>
    <string name="gender">gender</string>
    <string name="comma">,\u0020</string>
    <string name="load_error">Oops, can\'t load data</string>
    <string name="try_again">Try Again</string>
    <string name="search">search..</string>
    <string name="alive">alive</string>
    <string name="dead">dead</string>
    <string name="unknown">unknown</string>
    <string name="status_filter">Status:\u0020</string>
    <string name="gender_filter">Gender:\u0020</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="genderless">genderless</string>
    <string name="type_hint">Type..</string>
    <string name="episode_hint">S01E01</string>
    <string name="type_filter">Type:\u0020</string>
    <string name="episode_filter">Episode:\u0020</string>
    <string name="species_hint">Species..</string>
    <string name="species_filter">Species:\u0020</string>
    <string name="deny">deny</string>
    <string name="apply">apply</string>
    <string name="clear">clear</string>
    <string name="name_hint">Name..</string>
    <string name="title_hint">Title..</string>
    <string name="dimension_hint">Dimension..</string>
    <string name="created">Created:\u0020</string>
    <string name="location">Location:\u0020</string>
    <string name="origin">Origin:\u0020</string>
    <string name="air_date">Air date:\u0020</string>
    <string name="dimension_filter">Dimension:\u0020</string>
</resources>