<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_filter"
        app:layout_constraintBottom_toTopOf="@id/tvStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_filter"
        app:layout_constraintBottom_toTopOf="@id/groupStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutSearch" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/groupStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/tvGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAlive"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDead"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUnknownStatus"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_filter"
        app:layout_constraintBottom_toTopOf="@id/groupGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupStatus" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/groupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFemale"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMale"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipGenderless"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderless" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUnknownGender"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/type_filter"
        app:layout_constraintBottom_toTopOf="@id/inputLayoutSpecies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupGender"
        app:startIconDrawable="@drawable/type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutSpecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/species_filter"
        app:layout_constraintBottom_toBottomOf="@id/applyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutType"
        app:startIconDrawable="@drawable/species">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/deny"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/applyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutSpecies"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_500"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clearButton"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutSpecies"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>