<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/episode_detail_background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/semi_transparent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back_episode_detail"
            android:layout_width="40dp"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            style="@style/MyDetailTitleStyle"
            android:text="@string/episode_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_back_episode_detail"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="2dp"
        android:background="@drawable/card_background"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageCharacter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.9"
            android:src="@drawable/episode_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEpisode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episode_filter"
            android:textColor="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@id/episode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/episode"
            style="@style/text_style_accent_white"
            android:textColor="@color/main_500"
            app:layout_constraintBottom_toTopOf="@id/tvAirDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/tvEpisode"
            tools:text="@string/episode_hint" />

        <TextView
            android:id="@+id/tvAirDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_date"
            android:textColor="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@id/airDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/episode" />

        <TextView
            android:id="@+id/airDate"
            style="@style/text_style_accent_white"
            android:breakStrategy="high_quality"
            app:layout_constraintBottom_toTopOf="@id/tvCreated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/tvAirDate"
            tools:text="MdfgdfgdfdfgdgdgdgdgfgALE" />


        <TextView
            android:id="@+id/tvCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created"
            android:textColor="@color/light_grey"
            app:layout_constraintBottom_toTopOf="@id/created"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/airDate" />

        <TextView
            android:id="@+id/created"
            style="@style/text_style_accent_white"
            android:maxLength="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/tvCreated"
            tools:text="2017.04.04" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCharacters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:spanCount="2"
        tools:itemCount="20"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_character_detail" />
</LinearLayout>